testing heroku gif

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ h1, h3, h4 {
 }
 
 .banner {
-  background-image: url("https://i.makeagif.com/media/10-06-2016/yjj7CR.gif");
+  background-image: url("assets/fallingleaves.gif");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 70%;
