--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ h1, h3, h4 {
   background-image: url("assets/fallingleaves.gif");
   background-repeat: no-repeat;
   background-size: cover;
+  opacity: .7;
   color: white;
   text-align: center;
 }
