--- a/src/index.css
+++ b/src/index.css
@@ -127,10 +127,10 @@ h1, h3, h4 {
     font-size: .75em;
   }
 
-  /* .autumn-mobile-img {
+  .autumn-mobile-img {
     max-width: 125px;
     max-height: 150px;
-  } */
+  }
 
  .desktop-display, .experience {
     display: none;
@@ -147,10 +147,10 @@ h1, h3, h4 {
   }
 
   .autumn-mobile-img {
-    width: 20%;
+    width: 30%;
   }
   .about-text {
-    width: 69%;
+    width: 59%;
   }
   .project {
     display: block;
